--- a/frontend/src/Style/Dashboard.css
+++ b/frontend/src/Style/Dashboard.css
@@ -1,5 +1,9 @@
 .dashboard-container{
     flex-grow: 0.8;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-row-gap: 5em;
+    padding-left: 2em;
 }
 
 .widget-container{
